# PoC_realtime-fill

./: .gitignore  README.md  pyproject.toml
scripts/: form_assistant.py
src/audio/: __init__.py  capture.py  resample.py  ring_buffer.py
src/llm/: __init__.py  typhoon_api_engine.py  typhoon_engine.py
src/pipeline/: __init__.py  orchestrator.py
src/stt/: __init__.py  base.py  faster_whisper_backend.py  typhoon_asr_backend.py  whisper_cpp_backend.py
src/vad/: __init__.py  silero_vad.py
