[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-pipeline"
version = "0.1.0"
description = "Real-time voice AI pipeline: VAD → STT → LLM on Apple Silicon"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4.6",
    "onnxruntime>=1.16",
    "librosa>=0.10",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "faster-whisper>=1.0",
    "llama-cpp-python>=0.2.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
asr-typhoon = [
    "typhoon-asr",
]

[project.scripts]
voice-pipeline = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
